--- a/CSS/transaction-check.css
+++ b/CSS/transaction-check.css
@@ -177,7 +177,7 @@ ul {
 
 .top-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   padding: 1rem 2rem;
   background-color: var(--background-color);
@@ -185,26 +185,8 @@ ul {
   height: var(--header-height);
 }
 
-.search-bar {
-  position: relative;
-  max-width: 400px;
+.nav-spacer {
   flex: 1;
-}
-
-.search-bar i {
-  position: absolute;
-  left: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--text-light);
-}
-
-.search-bar input {
-  width: 100%;
-  padding: 0.5rem 1rem 0.5rem 2.5rem;
-  border: 1px solid var(--border-color);
-  border-radius: 0.375rem;
-  background-color: var(--background-alt);
 }
 
 .top-nav-right {
@@ -554,10 +536,6 @@ ul {
 
   .top-nav {
     padding: 1rem;
-  }
-
-  .search-bar {
-    max-width: 200px;
   }
 
   .form-actions {
