--- a/CSS/website-check.css
+++ b/CSS/website-check.css
@@ -177,7 +177,7 @@ ul {
 
 .top-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   padding: 1rem 2rem;
   background-color: var(--background-color);
@@ -185,26 +185,8 @@ ul {
   height: var(--header-height);
 }
 
-.search-bar {
-  position: relative;
-  max-width: 400px;
+.nav-spacer {
   flex: 1;
-}
-
-.search-bar i {
-  position: absolute;
-  left: 1rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--text-light);
-}
-
-.search-bar input {
-  width: 100%;
-  padding: 0.5rem 1rem 0.5rem 2.5rem;
-  border: 1px solid var(--border-color);
-  border-radius: 0.375rem;
-  background-color: var(--background-alt);
 }
 
 .top-nav-right {
@@ -402,9 +384,23 @@ ul {
   padding: 0.5rem;
   border-radius: 0.25rem;
   font-size: 0.75rem;
-  white-space: nowrap;
-  z-index: 10;
+  white-space: normal;
+  width: 200px;
+  text-align: center;
+  z-index: 1000;
   box-shadow: var(--box-shadow);
+  word-wrap: break-word;
+}
+
+.tooltip-icon:hover::before {
+  content: "";
+  position: absolute;
+  bottom: calc(100% - 5px);
+  left: 50%;
+  transform: translateX(-50%);
+  border: 5px solid transparent;
+  border-top-color: var(--text-color);
+  z-index: 1000;
 }
 
 .form-actions {
@@ -638,44 +634,6 @@ ul {
   text-align: center;
 }
 
-/* Fix tooltip overflow */
-.tooltip-icon {
-  margin-left: 0.5rem;
-  color: var(--text-light);
-  cursor: help;
-  position: relative;
-}
-
-.tooltip-icon:hover::after {
-  content: attr(data-tooltip);
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: var(--text-color);
-  color: white;
-  padding: 0.5rem;
-  border-radius: 0.25rem;
-  font-size: 0.75rem;
-  white-space: normal;
-  width: 200px;
-  text-align: center;
-  z-index: 1000;
-  box-shadow: var(--box-shadow);
-  word-wrap: break-word;
-}
-
-.tooltip-icon:hover::before {
-  content: "";
-  position: absolute;
-  bottom: calc(100% - 5px);
-  left: 50%;
-  transform: translateX(-50%);
-  border: 5px solid transparent;
-  border-top-color: var(--text-color);
-  z-index: 1000;
-}
-
 /* Hide feature selection when URL only mode is enabled */
 #featureSelection.hidden {
   display: none;
@@ -711,10 +669,6 @@ ul {
 
   .top-nav {
     padding: 1rem;
-  }
-
-  .search-bar {
-    max-width: 200px;
   }
 
   .form-actions {
